Do final design changes, ensure center-aligned related articles title

--- a/src/articles/components/ArticleView/articleView.less
+++ b/src/articles/components/ArticleView/articleView.less
@@ -3,11 +3,11 @@
 @import '~common/less/constants.less';
 
 .articleHeader {
-  margin: 1rem 1rem 0;
+  padding: 1rem 1rem 0;
 }
 
 .ingress {
-  margin: 0 1rem 1rem;
+  padding: 0 1rem 1rem;
 
   > hr {
     background-color: #ee7810;
@@ -43,8 +43,6 @@
 }
 
 .article {
-  .owCard();
-
   > img {
     width: 100%;
     border-radius: 3px 3px 0 0;
@@ -52,7 +50,7 @@
 }
 
 .articleText {
-  margin: 1rem;
+  padding: 1rem;
 }
 
 .byline {
@@ -60,7 +58,7 @@
   flex-wrap: wrap;
   padding-left: 1rem;
   padding-right: 1rem;
-  margin-top: 1rem;
+  margin-top: 4.5rem;
   line-height: 1.5;
 
   > .bylineItem {
@@ -91,8 +89,8 @@
   border-top: 1px solid @gray;
   position: relative;
   justify-content: space-between;
-  margin-right: 1rem;
-  margin-left: 1rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
   line-height: 1.5;
 
   > div {
@@ -101,7 +99,7 @@
 
     &:not(:first-child) {
       text-align: right;
-      margin-left: 1rem;
+      padding-left: 1rem;
     }
 
     > span.tags {
@@ -120,26 +118,24 @@
   }
 }
 
-@media screen and (min-width: @owTabletBreakpoint) {
-  .container {
-    display: grid;
-    grid-template:
-      '. article .' auto
-      '. relatedArticles .' ~'1fr / 0.5fr' minmax(0, 2fr) 0.5fr;
-    grid-gap: 1rem;
+@media screen and (max-width: @owTabletBreakpoint - 1) {
+  .article {
+    .owCard();
   }
 
+  .byline {
+    margin-top: 1rem;
+  }
+}
+
+@media screen and (min-width: @owTabletBreakpoint) {
   .article {
-    padding: 30px 30px 0;
     grid-area: article;
     display: grid;
     grid-template:
-      'articleImage articleImage' auto
-      'title .' auto
-      'ingress byline'
-      'articleText byline' auto
+      'articleImage .' auto
+      'articleMain byline'
       'articleMeta .' auto / 3fr 1fr;
-    grid-column-gap: 1rem;
 
     > img,
     .articleVideo {
@@ -149,6 +145,13 @@
     }
   }
 
+  .articleMain {
+    .owCard();
+    margin-top: 1rem;
+    grid-area: articleMain;
+    width: 100%;
+  }
+
   .articleText {
     grid-area: articleText;
     margin: 0;
@@ -156,12 +159,10 @@
 
   .articleHeader {
     grid-area: title;
-    margin: 1rem 0 0;
   }
 
   .ingress {
     grid-area: ingress;
-    margin: 0 0 1rem;
   }
 
   .relatedArticles {
@@ -181,6 +182,7 @@
     grid-area: byline;
     position: relative;
     width: 100%;
+    margin-left: 1rem;
 
     .byline {
       border-left: 1px solid @gray;
